--- a/src/Core/FoxSharp.csproj
+++ b/src/Core/FoxSharp.csproj
@@ -56,13 +56,21 @@
     <Compile Include="Ast\InfixExpression.cs" />
     <Compile Include="Ast\IntegerLiteral.cs" />
     <Compile Include="Ast\Interfaces.cs" />
-    <Compile Include="Ast\Null.cs" />
+    <Compile Include="Ast\NullLiteral.cs" />
     <Compile Include="Ast\PrefixExpression.cs" />
     <Compile Include="Ast\ReturnStatement.cs" />
+    <Compile Include="Ast\SmtpLiteral.cs" />
     <Compile Include="Ast\StringLiteral.cs" />
     <Compile Include="Ast\VarStatement.cs" />
     <Compile Include="Ast\Program.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="Parser\ParseCallExpression.cs" />
+    <Compile Include="Parser\ParseGroupedExpression.cs" />
+    <Compile Include="Parser\ParseIndexExpression.cs" />
+    <Compile Include="Parser\ParseInfix.cs" />
+    <Compile Include="Parser\ParseLiteral.cs" />
+    <Compile Include="Parser\ParsePrefix.cs" />
+    <Compile Include="Parser\ParserInterfaces.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Scanner\Scanner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
