--- a/src/Core/FoxSharp.csproj
+++ b/src/Core/FoxSharp.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,6 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ast\ArrayLiteral.cs" />
@@ -63,12 +65,16 @@
     <Compile Include="Ast\VarStatement.cs" />
     <Compile Include="Ast\Program.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="Evaluator\BuiltinAlltrim.cs" />
     <Compile Include="Evaluator\BuiltinError.cs" />
     <Compile Include="Evaluator\BuiltinFormat.cs" />
     <Compile Include="Evaluator\BuiltinInfo.cs" />
+    <Compile Include="Evaluator\BuiltinInputBox.cs" />
+    <Compile Include="Evaluator\BuiltinLeft.cs" />
     <Compile Include="Evaluator\BuiltinLen.cs" />
     <Compile Include="Evaluator\BuiltinLoad.cs" />
     <Compile Include="Evaluator\BuiltinQuestion.cs" />
+    <Compile Include="Evaluator\BuiltinRight.cs" />
     <Compile Include="Evaluator\Builtins.cs" />
     <Compile Include="Evaluator\BuiltinSend.cs" />
     <Compile Include="Evaluator\BuiltinType.cs" />
